# isa-group-work

./: .gitignore  main.py  pyproject.toml
src/: catalog.py  connector.py  get_data.py
tests/: test_connector.py
